package it.unipi.makermanagerserver.model.project;

public abstract class ProgettoMaker {
    
}
