%% diagramma di classe per l'entità ProgettoMaker
%% sono qui descritte le interfacce, le classi abstract, le superclassi e le
%% sottoclassi che descrivono un progetto presente nel database

classDiagram

    %% Ereditarietà
    
    ProgettoMaker <|-- ProgettoStampa3D
    ProgettoMaker <|-- ProgettoElettronica
    ProgettoMaker <|-- ProgettoRobotica
    ProgettoMaker <|-- ProgettoSoftware

    ProgettoMaker *-- BOM
    ProgettoMaker *-- Progresso

    BOM ..|> Calcolabile
    Progresso ..|> Tracciabile

    BOM *-- RigaBOM
    RigaBOM --> ElementoCatalogo

    Progresso --> StatoProgetto

    %% Struttura delle classi

    %% INTERFACCE

    class Calcolabile {
      <<interface>>
      + getFasciaPrezzo() pair~double, double~
      + getPrezzoEsatto() double
    } 
    
    class Tracciabile {
      <<interface>>
      + updateStatus() void
      + getAvanzamento() int

    } 
    
    %% CLASSI ABSTRACT

    class ProgettoMaker {
      <<abstract>>
      - String id
      - String titolo
      - BOM distinta_base
      - Progresso progresso
      + getBOM()
      + getProgresso()
    }

    %% CLASSI

    %% sottoclassi di progetto

    class ProgettoStampa3D {

    }

    class ProgettoElettronica {

    }

    class ProgettoRobotica {

    }

    class ProgettoSoftware {

    }

    %% caratteristiche del progetto

    class BOM {
      - List~RigaBOM~ requisiti
      + addToBOM(ElementoCatalogo elem, int quantità) void
    }

    class RigaBOM {
      - ElementoCatalogo elemento
      - int quantita
    }

    class Progresso {
      - int percentuale_avanzamento
      - Date data_inizio
      - StatoProgetto stato
    }

    %% enum

    class StatoProgetto {
      <<enum>>
      NON INIZIATO
      WORK IN PROGRESS
      COMPLETATO
    }
